Revision history for Getopt-Long

{{$NEXT}}

0.1.1  2019-05-26T15:11:45+02:00
    - Add support for Real parameters
    - Add getopt sub trait
    - Eliminate the extended integer parsing type

0.1.0  2019-02-03T01:43:46+01:00
    - Eliminate Capture in pair syntax
    - Add compound inference to pair syntax

0.0.3  2019-01-26T21:15:05+01:00
    - Added pair syntax
    - Implemented new perl6.d getopt hooks